# doogie_simulator

./: .gitignore  CMakeLists.txt  README.md  package.xml
doogie_gazebo/: CMakeLists.txt  README.md  ground_truth_plugin_description.xml  package.xml
doogie_gazebo/config/: sensor_commons.yaml
doogie_gazebo/include/doogie_gazebo/: ground_truth.hpp  ir_sensor_data_acc.hpp
doogie_gazebo/launch/: maze_launch.launch  robot_launch.launch  sim_move_base_interface.launch  sim_solver_application.launch
doogie_gazebo/src/: ground_truth.cpp  ir_sensor_data_acc.cpp  main.cpp
doogie_rviz/: CMakeLists.txt  package.xml
doogie_rviz/config/: maze_map.yaml
doogie_rviz/include/doogie_rviz/: maze_map.hpp
doogie_rviz/launch/: maze_map.launch  mpu_debug.launch  robot_display.launch
doogie_rviz/rviz/: imu_debug.rviz  maze_map.rviz
doogie_rviz/src/: maze_map.cpp  maze_map_node.cpp
doogie_simulator/: CMakeLists.txt  package.xml
launch/: robot_launch.launch
