<?xml version="1.0"?>
<package format="2">
    <name>doogie_gazebo</name>
    <version>0.0.0</version>
    <description>Provide launchfiles to use Doogie in gazebo</description>

    <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>
    <author email="caioaamaral@gmail.com">Caio Amaral</author>

    <url type="repository">https://github.com/Brazilian-Institute-of-Robotics/doogie_gazebo</url>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>doogie_description</exec_depend>
    <exec_depend>doogie_control</exec_depend>


</package>