<?xml version="1.0"?>
<package format="2">
  <name>doogie_gazebo</name>
  <version>0.0.0</version>
  <description>This package provides launch files to use Doogie Mouse robot in gazebo</description>

  <author email="caioaamaral@gmail.com">Caio Amaral</author>
  <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>

  <url type="repository">https://github.com/Brazilian-Institute-of-Robotics/doogie_gazebo</url>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>doogie_msgs</depend>
  <depend>message_filters</depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>doogie_description</exec_depend>
  <exec_depend>doogie_control</exec_depend>

</package>