<?xml version="1.0"?>
<package format="2">
  <name>doogie_rviz</name>
  <version>0.0.0</version>
  <description>Package to visualize the robot status and the maze in RViz</description>

  <author email="mateusmenezes95@gmail.com">Mateus Menezes</author>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>

  <license>Apache2-0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>nav_msgs</depend>
  <depend>doogie_msgs</depend>
  <depend>doogie_core</depend>
  
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
